fixed typewriter issue, issue was a fn that didnt work anymore

--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,6 @@ header a:hover {
     color: rgba(246, 235, 242, 0.817);
 }
 
-/*TODO: TYPEWRITER NOT WORKING ANYMORE !!*/
-
 #typewriter{
     display: inline-block;
     overflow: wrap;
@@ -182,14 +180,11 @@ header a:hover {
 }
     
 /*****ABOUT US*****/
-/* div surrounding entire about us section */
 .about-us {
     background-color: seashell;
     border-radius: 0 0 25px 25px;
     text-align: center;
     font-family: var(--space-mono);
-    border: 10px solid rgba(189, 116, 47, 0.198);
-    border-top: none;
 }
 
 /* WHO ARE WE? [...] */
@@ -224,25 +219,8 @@ header a:hover {
 }
 
 /* SMALL PARAGRAPH DESCRIPTIONS UNDERNEATH DOTTED LINE */
-.about-us-desc-2 {
-    height: 100vh;
-    margin:auto;
-    padding: 10px;
-    border-top: none;
-    border-radius: 10px;
-}
-
-.about-us-desc-2 p {
-    padding-bottom: 30px;
-}
-
 .about-us-2, .about-us-3 {
     font-size: var(--16px);
-}
-
-.about-us-3 {
-    display: block;
-    padding-bottom: 100px;
 }
 
 .about-us-4, .about-us-5 {
@@ -250,16 +228,15 @@ header a:hover {
 }
 
 .about-us-4 a {
-    border: 2px solid white;
+    border: 2px solid black;
     padding: 10px 15px;
     border-radius: 10px;
     color:white;
-    background: orange;
+    background: burlywood;
 }
 
 .about-us-4 a:hover {
-    background: rgba(240, 122, 11, 0.332);
-    cursor: pointer;
+    background: rgba(241, 27, 27, 0.13);
 }
 
 .about-us-5 {
