--- a/css/style.css
+++ b/css/style.css
@@ -281,9 +281,9 @@ header a:hover {
     text-align: center;
 }
 .tutor {
-    float: left;
-    width: 49%;
-    margin: 0 0.1rem;
+    width: 100;
+    margin: 2rem;
+    padding-bottom: 2rem;
 }
 
 .tutor-img img {
