--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     --30px: 1.875rem;
     --40px: 2.5rem;
     --80px: 5rem;
+    --60px: 3.75rem;
 }
 
 .bold {
@@ -183,7 +184,7 @@ header a:hover {
 /*************      *****************/
 
 .about-us {
-    background-color: seashell;
+    background-color: white;
     border-radius: 0 0 25px 25px;
     font-family: var(--space-mono);
     padding-bottom: 2rem;
@@ -255,6 +256,7 @@ header a:hover {
     border-radius: 10px;
     color:white;
     background: #f8b016;
+    text-decoration: none;
 }
 
 .about-us-5-button a:hover {
@@ -286,6 +288,7 @@ header a:hover {
     width: 100;
     margin: 2rem;
     padding-bottom: 2rem;
+    text-align: center;
 }
 
 .tutor-img img {
@@ -302,3 +305,15 @@ header a:hover {
 
 /*************SCHEDULE*****************/
 /*************      *****************/
+.schedule {
+    color: whitesmoke;
+    font-family: var(--space-mono);
+    padding-top: 2rem;
+}
+
+.schedule h1 {
+    font-size: 60px;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: var(--60px);
+}
