--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,86 @@ header a:hover {
 /*************EVENTS*****************/
 /*************      *****************/
 
-/* here */
+.events {
+	margin: 0;
+	padding: 10rem 0;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.events h1 {
+	align-items: left;
+	display: flex;
+	background: #fda848;
+    color: white;
+    padding: 20px;
+	width: 100%;
+	transform: rotate(10deg);
+}
+
+.events p {
+	transition: all 1s ease;
+	width: 15rem;
+	position: absolute;
+	background: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	perspective: 10rem;
+	width: 8rem;
+	z-index: 0;
+	transform: rotate(-15deg);
+}
+
+.events ul {
+	margin: 0;
+	padding: 0;
+	width: 60%;
+}
+
+.events li {
+	position: relative;
+	padding: 13px;
+	transform: rotate(-8deg);
+	width: 76%;
+	background: #f78b10;
+    color: white;
+	display: flex;
+}
+
+.events li:hover {
+	font-size: 22px;
+	color: #f4d7e1;
+}
+
+.events li time {
+	font-size: 20px;
+	position: relative;
+	cursor: pointer;
+	overflow: hidden;
+	padding: 20px;
+	font-size: 20px;
+}
+
+.events li time {
+	position: relative;
+	background: #f78b10;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	box-sizing: border-box;
+	box-shadow: 0 20px 20px rgba(0, 0, 0, 0.8);
+	transform: translateX(-76px);
+}
+
+.events li time:hover {
+	transform: translateX(16px);
+	transform: rotate(10deg);
+}
 
 
 
