--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ header a:hover {
     color: rgba(246, 235, 242, 0.817);
 }
 
-#typewriter{
+#typewriter, #typewriter-sched {
     display: inline-block;
     overflow: wrap;
     white-space: initial;
@@ -317,19 +317,33 @@ header a:hover {
     padding-top: 2rem;
 }
 
-.schedule h1 {
-    font-size: 60px;
+.schedule h1, .schedule h2 {
+    font-size: var(--40px);
     text-align: center;
     text-transform: uppercase;
     line-height: var(--60px);
+    padding: 0 2rem;
 }
+
+.schedule img {
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 1rem;
+}
+
+.schedule h2 {
+    margin-top: 10rem;
+}
+
 
 /*************EVENTS*****************/
 /*************      *****************/
 
 .events {
 	margin: 0;
-	padding: 10rem 0;
+	padding: 0 0 10rem 0;
 	min-height: 100vh;
 	display: flex;
 	justify-content: center;
@@ -343,13 +357,13 @@ header a:hover {
     color: white;
     padding: 20px;
 	width: 100%;
-	transform: rotate(10deg);
+	transform: rotate(90deg);
 }
 
 .events p {
 	transition: all 1s ease;
 	width: 15rem;
-	position: absolute;
+	position: block;
 	background: #fff;
 	display: flex;
 	justify-content: center;
@@ -364,7 +378,7 @@ header a:hover {
 .events ul {
 	margin: 0;
 	padding: 0;
-	width: 60%;
+	width: 80%;
 }
 
 .events li {
