forgot haha probs more events and socials

--- a/css/style.css
+++ b/css/style.css
@@ -435,3 +435,7 @@ header a:hover {
     text-transform: uppercase;
     font-size: var(--40px);
 }
+
+.fa-facebook-square {
+    font-size: 100px;
+}
