--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ header a {
     text-decoration: none;
     font-size: var(--30px);
     display: block;
+    transition: ease-in 0.3s;
   }
 
   /* Style the hamburger menu */
@@ -259,6 +260,7 @@ header a:hover {
     color:white;
     background: #f8b016;
     text-decoration: none;
+    transition: ease-in 0.3s;
 }
 
 .about-us-5-button a:hover {
@@ -324,32 +326,10 @@ header a:hover {
     color: whitesmoke;
     font-family: var(--space-mono);
     padding: 1rem 0;
-}
-
-.schedule h1, .schedule h2 {
-    font-size: var(--30px);
-    text-align: center;
-    line-height: var(--40px);
-    padding: 0 2rem;
-}
-
-.schedule img {
-    width: 90%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 1rem;
-}
-
-.schedule h2 {
-    margin-top: 10rem;
-    text-align: center;
-}
-
-.schedule-container {
     margin: 0 1.5rem;
     border-radius: 20px;
 }
+
 
 /*************EVENTS*****************/
 /*************      *****************/
@@ -447,7 +427,6 @@ header a:hover {
 .socials-color-container {
 background: #f78b10;
 padding: 2rem;
-border-radius: 20px;
 }
 
 .socials {
@@ -486,6 +465,7 @@ border-radius: 20px;
 .socials-individual a{
     text-decoration: none;
     color: rgba(245, 245, 245, 0.833);
+    transition: ease-in 0.3s;
 }
 
 .socials-individual .facebook:hover, .socials-individual .email:hover, .socials-individual a:hover {
