--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ header {
     padding: 0.7rem 1.875rem;
 }
 
+header .logo {
+    padding-top: 0.9rem;
+}
+
 header nav {
     display: none;
 }
@@ -548,5 +552,3 @@ padding: 2rem;
 .socials span {
     font-size: var(--20px);
 }
-
-/* big change */
