--- a/css/style.css
+++ b/css/style.css
@@ -143,11 +143,12 @@ header a:hover {
     /*Properties for larger screens*/
     header .logo {
         float: left;
-        width: 33.333%;
+        width: 35%;
+        padding-left: 2rem;
     }
 
     header nav {
-        width: 66.66%;
+        width: 65%;
         float: left;
         margin-top: 20px;
         display: block;
